syntax = "proto3";
package router;

service Router {
    rpc RegisterConduitRoute (RegisterConduitRouteRequest) returns (Empty);
}

message RegisterConduitRouteRequest {

    repeated PathDefinition routes = 1;
    string protoFile = 2;
    message PathDefinition {
        string path = 1;
        string method = 2;
        //  The json definition for the inputs
        string inputs = 3;
        string grpcFunction = 4;
    }
}

message Empty {
}
